--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
 		"react-redux": "^7.1.0",
 		"react-router-dom": "^5.0.1",
 		"redux": "^4.0.1",
-		"source-sans-pro": "^2.45.0"
+		"source-sans-pro": "^2.45.0",
+		"winston": "^3.2.1"
 	},
 	"devDependencies": {
 		"@electron-forge/cli": "6.0.0-beta.39",
