--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
 		}
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.21",
+		"@fortawesome/free-solid-svg-icons": "^5.10.1",
+		"@fortawesome/pro-light-svg-icons": "^5.10.1",
+		"@fortawesome/pro-regular-svg-icons": "^5.10.1",
+		"@fortawesome/pro-solid-svg-icons": "^5.10.1",
+		"@fortawesome/react-fontawesome": "^0.1.4",
 		"@types/react": "^16.8.23",
 		"@types/react-dom": "^16.8.4",
 		"@types/react-router-dom": "^4.3.4",
