--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"css-loader": "^3.0.0",
 		"electron": "5.0.6",
 		"file-loader": "^4.0.0",
+		"husky": "^3.0.4",
 		"less": "^3.9.0",
 		"less-loader": "^5.0.0",
 		"lint-staged": "^9.2.3",
