--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
 		"lint-staged": "^9.2.3",
 		"mini-css-extract-plugin": "^0.7.0",
 		"node-loader": "^0.6.0",
+		"prettier": "^1.18.2",
 		"redux-devtools": "^3.5.0",
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^6.0.4",
