--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{ts,tsx}": ["tslint --fix", "prettier --fix", "git add"],
+  "*.{ts,tsx}": ["tslint --fix", "git add"],
   "{yarn.lock,package.json}": "yarn audit"
 }
