--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^6.0.4",
 		"tslint": "^5.18.0",
-		"typescript": "^3.5.2"
+		"typescript": "^3.5.2",
+		"url-loader": "^2.1.0"
 	},
 	"husky": {
 		"hooks": {
