Jest Test Suite + Email Class Tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"package": "electron-forge package",
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
-		"lint": "tslint src/**/*"
+		"lint": "tslint src/**/*",
+		"test": "jest test/"
 	},
 	"keywords": [],
 	"author": "Android",
@@ -79,6 +80,7 @@
 		"@fortawesome/react-fontawesome": "^0.1.4",
 		"@types/react": "^16.8.23",
 		"@types/react-dom": "^16.8.4",
+		"@types/react-redux": "^7.1.2",
 		"@types/react-router-dom": "^4.3.4",
 		"aphrodite": "^2.3.1",
 		"appdirectory": "^0.1.0",
@@ -101,10 +103,12 @@
 		"@electron-forge/maker-zip": "6.0.0-beta.39",
 		"@electron-forge/plugin-webpack": "6.0.0-beta.39",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+		"@types/jest": "^24.0.18",
 		"css-loader": "^3.0.0",
 		"electron": "5.0.6",
 		"file-loader": "^4.0.0",
 		"husky": "^3.0.4",
+		"jest": "^24.9.0",
 		"less": "^3.9.0",
 		"less-loader": "^5.0.0",
 		"lint-staged": "^9.2.3",
@@ -113,6 +117,7 @@
 		"prettier": "^1.18.2",
 		"redux-devtools": "^3.5.0",
 		"source-map-loader": "^0.2.4",
+		"ts-jest": "^24.1.0",
 		"ts-loader": "^6.0.4",
 		"tslint": "^5.18.0",
 		"typescript": "^3.5.2",
