--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"outDir": "dist",
 		"baseUrl": ".",
 		"paths": {
-			"*": ["node_modules/*"]
+			"*": ["node_modules/*"],
+			"src/*": ["src/*"]
 		},
 		"jsx": "react"
 	},
