--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
 		"lint": "tslint src/**/*",
-		"test": "jest test/"
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "Android",
@@ -104,6 +104,7 @@
 		"@electron-forge/plugin-webpack": "6.0.0-beta.39",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@types/jest": "^24.0.18",
+		"@types/react-test-renderer": "^16.9.0",
 		"css-loader": "^3.0.0",
 		"electron": "5.0.6",
 		"file-loader": "^4.0.0",
@@ -115,6 +116,7 @@
 		"mini-css-extract-plugin": "^0.7.0",
 		"node-loader": "^0.6.0",
 		"prettier": "^1.18.2",
+		"react-test-renderer": "^16.9.0",
 		"redux-devtools": "^3.5.0",
 		"source-map-loader": "^0.2.4",
 		"ts-jest": "^24.1.0",
