Fix workflows file
... hopefully

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -24,4 +24,4 @@ jobs:
         yarn test
       env:
         CI: true
-        FA_AUTH_TOKEN: ${{ FA_AUTH_TOKEN }}
+        FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
