Fix badge for tests

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -1,27 +1,26 @@
-name: Run Tests
+name: Tests
 
 on: [push]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [8.x, 10.x, 12.x]
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-
-    steps:
-    - uses: actions/checkout@v1
-    - name: Use Yarn ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: yarn install and test
-      run: |
-        npm install -g yarn
-        yarn install
-        yarn test
-      env:
-        CI: true
-        FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
+        steps:
+            - uses: actions/checkout@v1
+            - name: Use Yarn ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - name: yarn install and test
+              run: |
+                  npm install -g yarn
+                  yarn install
+                  yarn test
+              env:
+                  CI: true
+                  FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
