--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -18,6 +18,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: yarn install and test
               run: |
+                  npm config set "//npm.fontawesome.com/:_authToken" "${FA_AUTH_TOKEN}"
                   npm install -g yarn
                   yarn install
                   yarn test
