--- a/package.json
+++ b/package.json
@@ -78,42 +78,44 @@
 		"@fortawesome/pro-regular-svg-icons": "^5.10.1",
 		"@fortawesome/pro-solid-svg-icons": "^5.10.1",
 		"@fortawesome/react-fontawesome": "^0.1.4",
+		"@types/imap": "^0.8.30",
 		"@types/react": "^16.8.23",
 		"@types/react-dom": "^16.8.4",
 		"@types/react-redux": "^7.1.2",
-		"@types/react-router-dom": "^4.3.4",
+		"@types/react-router-dom": "^5.1.3",
 		"aphrodite": "^2.3.1",
 		"appdirectory": "^0.1.0",
 		"electron-squirrel-startup": "^1.0.0",
-		"keytar": "^4.12.0",
+		"imap": "https://github.com/LoveAndCoding/node-imap",
+		"keytar": "^5.0.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.1.0",
 		"react-router-dom": "^5.0.1",
 		"redux": "^4.0.1",
-		"source-code-pro": "^2.30.1",
-		"source-sans-pro": "^2.45.0",
+		"source-code-pro": "^2.30.2",
+		"source-sans-pro": "^3.6.0",
 		"winston": "^3.2.1"
 	},
 	"devDependencies": {
-		"@electron-forge/cli": "6.0.0-beta.39",
-		"@electron-forge/maker-deb": "6.0.0-beta.39",
-		"@electron-forge/maker-rpm": "6.0.0-beta.39",
-		"@electron-forge/maker-squirrel": "6.0.0-beta.39",
-		"@electron-forge/maker-zip": "6.0.0-beta.39",
-		"@electron-forge/plugin-webpack": "6.0.0-beta.39",
+		"@electron-forge/cli": "6.0.0-beta.47",
+		"@electron-forge/maker-deb": "6.0.0-beta.47",
+		"@electron-forge/maker-rpm": "6.0.0-beta.47",
+		"@electron-forge/maker-squirrel": "6.0.0-beta.47",
+		"@electron-forge/maker-zip": "6.0.0-beta.47",
+		"@electron-forge/plugin-webpack": "6.0.0-beta.47",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@types/jest": "^24.0.18",
 		"@types/react-test-renderer": "^16.9.0",
 		"css-loader": "^3.0.0",
-		"electron": "5.0.6",
-		"file-loader": "^4.0.0",
+		"electron": "^7.1.7",
+		"file-loader": "^5.0.2",
 		"husky": "^3.0.4",
 		"jest": "^24.9.0",
 		"less": "^3.9.0",
 		"less-loader": "^5.0.0",
 		"lint-staged": "^9.2.3",
-		"mini-css-extract-plugin": "^0.7.0",
+		"mini-css-extract-plugin": "^0.9.0",
 		"node-loader": "^0.6.0",
 		"prettier": "^1.18.2",
 		"react-test-renderer": "^16.9.0",
@@ -123,7 +125,7 @@
 		"ts-loader": "^6.0.4",
 		"tslint": "^5.18.0",
 		"typescript": "^3.5.2",
-		"url-loader": "^2.1.0"
+		"url-loader": "^3.0.0"
 	},
 	"husky": {
 		"hooks": {
