--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"react-redux": "^7.1.0",
 		"react-router-dom": "^5.0.1",
 		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0",
 		"source-code-pro": "^2.30.2",
 		"source-sans-pro": "^3.6.0",
 		"winston": "^3.2.1"
