--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
 		"ts-jest": "^24.1.0",
 		"ts-loader": "^6.0.4",
 		"tslint": "^5.18.0",
+		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.5.2",
 		"url-loader": "^3.0.0"
 	},
