--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"imap": "https://github.com/LoveAndCoding/node-imap",
 		"keytar": "^5.0.0",
 		"react": "^16.8.6",
+		"react-balance-text": "^2.0.1",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.1.0",
 		"react-router-dom": "^5.0.1",
