--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
 		"source-map-loader": "^0.2.4",
 		"ts-jest": "^24.1.0",
 		"ts-loader": "^6.0.4",
+		"tsconfig-paths-webpack-plugin": "^3.2.0",
 		"tslint": "^5.18.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.8.1",
