--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"outDir": "dist",
 		"paths": {
 			"*": ["node_modules/*"],
+			"images/*": ["images/*"],
 			"src/*": ["src/*"]
 		},
 		"sourceMap": true,
