--- a/package.json
+++ b/package.json
@@ -49,11 +49,21 @@
 							"config": "./webpack.renderer.config.js",
 							"entryPoints": [
 								{
+									"js": "./styles/base.css",
+									"name": "styles"
+								},
+								{
+									"additionalChunks": [
+										"styles"
+									],
 									"html": "./templates/index.html",
 									"js": "./src/renderer.tsx",
 									"name": "main_window"
 								},
 								{
+									"additionalChunks": [
+										"styles"
+									],
 									"html": "./templates/onboarding.html",
 									"js": "./src/onboarding.tsx",
 									"name": "onboarding"
@@ -116,6 +126,7 @@
 		"react-test-renderer": "^16.9.0",
 		"redux-devtools": "^3.5.0",
 		"source-map-loader": "^0.2.4",
+		"style-loader": "^1.1.3",
 		"ts-jest": "^24.1.0",
 		"ts-loader": "^6.0.4",
 		"tsconfig-paths-webpack-plugin": "^3.2.0",
