:arrow_up: Bump TS Target to ES2019
Electron supports ES2019+, so we can use that as our target to improve
the output.

Also cleaned up the .webpack output folder a bit, but that's really
not important at all so :woman_shrugging:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 			"src/*": ["src/*"]
 		},
 		"sourceMap": true,
+		"target": "ES2019",
 		"typeRoots": ["./node_modules/@types", "./types"]
 	},
 	"include": ["src/**/*"]
