--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "lovely-inbox",
-	"productName": "lovely-inbox",
-	"version": "1.0.0",
-	"description": "A lovely little inbox app",
+	"productName": "Lovely Inbox",
+	"version": "0.0.3",
+	"description": "A Lovely Inbox App",
 	"main": ".webpack/main",
 	"scripts": {
 		"start": "electron-forge start",
@@ -13,7 +13,7 @@
 		"test": "jest"
 	},
 	"keywords": [],
-	"author": "Android",
+	"author": "Alexis Hushbeck (https://loveandcoding.com)",
 	"license": "MIT",
 	"config": {
 		"forge": {
