--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"devDependencies": {
 		"@electron-forge/cli": "6.0.0-beta.47",
+		"@electron-forge/maker-dmg": "^6.0.0-beta.50",
 		"@electron-forge/maker-squirrel": "6.0.0-beta.47",
 		"@electron-forge/maker-zip": "6.0.0-beta.47",
 		"@electron-forge/plugin-webpack": "6.0.0-beta.47",
