--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
 		"winston": "^3.2.1"
 	},
 	"devDependencies": {
-		"@electron-forge/cli": "6.0.0-beta.47",
+		"@electron-forge/cli": "^6.0.0-beta.50",
 		"@electron-forge/maker-dmg": "^6.0.0-beta.50",
-		"@electron-forge/maker-squirrel": "6.0.0-beta.47",
-		"@electron-forge/maker-zip": "6.0.0-beta.47",
-		"@electron-forge/plugin-webpack": "6.0.0-beta.47",
+		"@electron-forge/maker-squirrel": "^6.0.0-beta.50",
+		"@electron-forge/maker-zip": "^6.0.0-beta.50",
+		"@electron-forge/plugin-webpack": "^6.0.0-beta.50",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@types/imap": "^0.8.30",
 		"@types/jest": "^24.0.18",
@@ -56,7 +56,7 @@
 		"@types/react-router-dom": "^5.1.3",
 		"@types/react-test-renderer": "^16.9.0",
 		"css-loader": "^3.0.0",
-		"electron": "^7.1.7",
+		"electron": "^8.1.0",
 		"file-loader": "^5.0.2",
 		"jest": "^24.9.0",
 		"lint-staged": "^9.2.3",
@@ -73,5 +73,8 @@
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.8.1",
 		"url-loader": "^3.0.0"
+	},
+	"resolutions": {
+		"node-abi": "^2.15.0"
 	}
 }
