:traffic_light: Lint During CI Tests
Adds linting to our CI test workflow. Make lint errors a bigger deal.

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -23,6 +23,9 @@ jobs:
                   yarn install
               env:
                   FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
+            - name: Lint
+              run: |
+                  yarn lint
             - name: Test
               run: |
                   yarn test
