--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: Install Deps
               run: |
-                  npm config set "//npm.fontawesome.com/:_authToken" "${FA_AUTH_TOKEN}"
+                  npm config set "//npm.fontawesome.com/:_authToken" "%FA_AUTH_TOKEN%"
                   npm install -g yarn
                   yarn install
               env:
