--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     build_win:
-        runs-on: windows-latest
+        runs-on: windows-2016
 
         strategy:
             matrix:
@@ -23,7 +23,7 @@ jobs:
               run: |
                   npm config set "//npm.fontawesome.com/:_authToken" "%FA_AUTH_TOKEN%"
                   npm install -g yarn
-                  yarn install --verbose
+                  yarn install
               env:
                   FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
             - name: Upload Yarn Errors (on Failure)
@@ -58,7 +58,7 @@ jobs:
               run: |
                   npm config set "//npm.fontawesome.com/:_authToken" "${FA_AUTH_TOKEN}"
                   npm install -g yarn
-                  yarn install --verbose
+                  yarn install
               env:
                   FA_AUTH_TOKEN: ${{ secrets.FA_AUTH_TOKEN }}
             - name: Upload Yarn Errors (on Failure)
