:robot: Basic End-to-End Testing
Right now the e2e testing is very basic and simply checks that the app
opens. But this will be the baseline for future e2e tests.

Enables e2e tests for GitHub builds too.

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -29,5 +29,6 @@ jobs:
             - name: Test
               run: |
                   yarn test
+                  yarn test:e2e
               env:
                   CI: true
