--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
 		"lint": "tslint src/**/*",
-		"test": "jest"
+		"test": "jest",
+		"test:e2e": "yarn test:e2e:build  && yarn test:e2e:run",
+		"test:e2e:build": "cross-env NODE_ENV=test electron-forge package --arch x64 --platform linux",
+		"test:e2e:run": "jest --config jest.e2e.config.js"
 	},
 	"keywords": [],
 	"author": "Alexis Hushbeck (https://loveandcoding.com)",
@@ -55,6 +58,7 @@
 		"@types/react-redux": "^7.1.2",
 		"@types/react-router-dom": "^5.1.3",
 		"@types/react-test-renderer": "^16.9.0",
+		"cross-env": "^7.0.2",
 		"css-loader": "^3.0.0",
 		"electron": "^8.1.0",
 		"file-loader": "^5.0.2",
@@ -65,6 +69,7 @@
 		"react-test-renderer": "^16.9.0",
 		"redux-devtools": "^3.5.0",
 		"source-map-loader": "^0.2.4",
+		"spectron": "^10.0.1",
 		"style-loader": "^1.1.3",
 		"ts-jest": "^24.1.0",
 		"ts-loader": "^6.0.4",
