--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"package": "electron-forge package",
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
-		"lint": "tslint src/**/*",
+		"lint": "yarn lint:ts && yarn lint:js",
+		"lint:js": "eslint ./src --ext .js,.jsx,.mjs -c .js.eslintrc.js",
+		"lint:ts": "eslint ./src ./scripts ./test ./types --ext .ts,.tsx -c .ts.eslintrc.js",
 		"test": "jest",
 		"test:e2e": "yarn test:e2e:build  && yarn test:e2e:run",
 		"test:e2e:build": "cross-env NODE_ENV=test electron-forge package --arch x64 --platform linux",
@@ -55,9 +57,13 @@
 		"@types/react-redux": "^7.1.2",
 		"@types/react-router-dom": "^5.1.3",
 		"@types/react-test-renderer": "^16.9.0",
+		"@typescript-eslint/eslint-plugin": "^4.23.0",
+		"@typescript-eslint/parser": "^4.23.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^5.2.4",
 		"electron": "^12.0.7",
+		"eslint": "^7.26.0",
+		"eslint-config-prettier": "^8.3.0",
 		"file-loader": "^5.0.2",
 		"jest": "^25.1.0",
 		"lint-staged": "^9.2.3",
@@ -71,9 +77,7 @@
 		"ts-jest": "^25.2.1",
 		"ts-loader": "^6.0.4",
 		"tsconfig-paths-webpack-plugin": "^3.2.0",
-		"tslint": "^6.1.0",
-		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.8.1",
+		"typescript": "^4.2.4",
 		"url-loader": "^3.0.0"
 	},
 	"resolutions": {
